# finanzamt

./: .env.example  .env.example.short  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  env.example  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: agent.rst  cli.rst  exceptions.rst  models.rst  storage.rst  utils.rst
docs/guides/: configuration.rst  installation.rst  quickstart.rst
examples/: batch_process.py  process_receipt.py
examples/receipts/: receipt1_extracted.json  receipt1_extracted_data.json  receipt2_extracted.json  receipt2_extracted_data.json
finance_agent/: __init__.py  config.py  exceptions.py  models.py  ocr_processor.py  requirements.txt  utils.py
readme/: README_de.md
src/finamt/: __init__.py  __version__.py  cli.py  exceptions.py  models.py  ocr_processor.py  progress.py  utils.py
src/finamt/agents/: __init__.py  agent.py  config.py  llm_caller.py  pipeline.py  prompts.py
src/finamt/storage/: __init__.py  base.py  project.py  sqlite.py
src/finamt/tax/: __init__.py  bilanz.py  ebilanz.py  ustva.py
src/finamt/ui/: api.py  server.py
src/finamt/ui/static/: index.html
src/finamt/ui/static/assets/: index-0sLgDf8X.js  index-1cWfbnTM.css  index-3qPwxWj_.css  index-3tg-FdH2.js  index-5odsE2NX.css  index-B-e7UcWC.css  index-BbY-5Zrp.js  index-BniogeIC.js  index-Bs9kfCFX.js  index-BvMnUCJq.js  index-C46enWs0.css  index-C56MZ_hT.css  index-C9TzTXjU.css  index-CShbwPO1.js  index-C_Wmy4me.js  index-Cb1ZQ9tP.css  index-Cnsfhcet.js  index-CqZ_lfJE.js  index-CsgeY-ae.js  index-Cwn5bHH5.js  index-D1l88JuS.js  index-D2K_DRIt.js  index-D3XcYSSl.css  index-D4KQ5Sbt.js  index-D4SzI8Po.css  index-D77Vk6Pc.css  index-DBpvpEd4.js  index-DEaqf0SM.js  index-DFhlQUSH.js  index-DRMkJ_5k.js  index-DYncra15.css  index-DcIHcoqB.js  index-De1GAKx5.js  index-Dkf5d2SS.css  index-DnIMS-BD.css  index-DtkPJ-ZK.css  index-DvpP0nqP.js  index-E2-7AJvV.js  index-I0PYVn36.css  index-IMimAsCU.css  (+9 more)
src/finanzamt/: __init__.py  __version__.py  agent.py  cli.py  config.py  exceptions.py  models.py  ocr_processor.py  prompts.py  utils.py
src/finanzamt/agents/: __init__.py  agent.py  agent1_text.py  agent2_vision.py  agent3_validator.py  config.py  llm_caller.py  pipeline.py  prompts.py  rules.py
src/finanzamt/storage/: __init__.py  base.py  project.py  sqlite.py
src/finanzamt/tax/: __init__.py  ustva.py
src/finanzamt/ui/: api.py  server.py
src/finanzamt/ui/static/: index.html
src/finanzamt/ui/static/assets/: index-77e01zfW.js  index-7Hy-HIuP.css  index-B2Qr8JXJ.css  index-BGaTW-XJ.css  index-B_WFPnf9.css  index-BbQC-gV0.js  index-BjGS8jbE.css  index-Bqw-7xIO.css  index-CQrJNDYi.js  index-Cyst4pj6.js  index-DJVu6MB7.css  index-DPURSjYn.js  index-DeOPlKVj.js  index-DreDGrEK.js
tests/: conftest.py  pytest.ini  test_agent.py  test_cli_inprocess.py  test_config.py  test_exceptions.py  test_models.py  test_ocr_processor.py  test_pipeline.py  test_private_use.py  test_prompts.py  test_storage.py  test_ustva.py  test_utils.py  utils.py
