[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-finance-agent"
version = "0.1.2"
description = "An agentic AI library for processing financial receipts"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yauheniya Varabyova", email = "yauheniya.ail@gmail.com"}
]
maintainers = [
    {name = "Yauheniya Varabyova", email = "yauheniya.ail@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
keywords = ["finance", "receipts", "ocr", "ai", "llm", "agent", "extraction"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "PyMuPDF>=1.22.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.0.0",
    "opencv-python>=4.6.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.8.0",
    "responses>=0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/yauheniya-ai/ai-finance-agent"
"Documentation" = "https://ai-finance-agent.readthedocs.io/"
"Repository" = "https://github.com/yauheniya-ai/ai-finance-agent"
"Bug Tracker" = "https://github.com/yauheniya-ai/ai-finance-agent/issues"
"Changelog" = "https://github.com/yauheniya-ai/ai-finance-agent/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_agent*"]

[tool.setuptools.package-data]
finance_agent = ["py.typed"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?'