[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finanzamt"
version = "0.1.4"
description = "A Python library for processing receipts, extracting key information, and assisting in the preparation of all essential tax return statements."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yauheniya Varabyova"}
]
maintainers = [
    {name = "Yauheniya Varabyova"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: German",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]
keywords = ["finanzamt", "finance", "receipts", "tax", "statement", "ocr", "extraction"]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "PyMuPDF>=1.22.0",
    "pytesseract>=0.3.10",
    "pydantic",
    "pydantic-settings",
    "Pillow>=9.0.0",
    "opencv-python>=4.6.0",
    "numpy>=1.21.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "twine",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.18",
]

[project.urls]
"Repository" = "https://github.com/yauheniya-ai/finanzamt"
"Changelog" = "https://github.com/yauheniya-ai/finanzamt/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["finanzamt"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*"]

